--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ body {
 }
 
 .box:before {
-  content:"Swanepoel";
+  content:"Isabella";
   position: absolute;
   font-size: 30px;
   font-family: "Brush Script MT", cursive;
