--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
    height: 100vh;
    align-items: center;
    justify-content: center;
-   background-color: #4e3b31;
+   background-color: #a1866f;
    overflow: hidden;
 }
 
